// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.securecomputation.controlplane.v1alpha;

import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "wfa/measurement/securecomputation/controlplane/v1alpha/work_item_attempt.proto";

option java_package = "org.wfanet.measurement.securecomputation.controlplane.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "WorkItemAttemptsServiceProto";

// Service for interacting with `WorkItemAttempts` resources.
service WorkItemAttempts {
  // Creates a `WorkItemAttempt`.
  //
  // Creates a new `WorkItemAttempt` with state `CLAIMED`.
  // Set the state in the parent `WorkItem` as `CLAIMED`.
  rpc CreateWorkItemAttempt(CreateWorkItemAttemptRequest) returns (WorkItemAttempt) {
    option (google.api.method_signature) = "parent,work_item_attempt";
  }

  // Returns the `WorkItemAttempt` with the specified resource key.
  rpc GetWorkItemAttempt(GetWorkItemAttemptRequest) returns (WorkItemAttempt) {
    option (google.api.method_signature) = "name";
  }

  // Lists `WorkItemAttempt`s.
  rpc ListWorkItemAttempts(ListWorkItemAttemptsRequest) returns (ListWorkItemAttemptsResponse) {
    option (google.api.method_signature) = "parent";
  }

  // Updates a `WorkItemAttempt`.
  //
  // Update the State to `SUCCEEDED`
  rpc CompleteWorkItemAttempt(CompleteWorkItemAttemptRequest) returns (WorkItemAttempt) {
    option (google.api.method_signature) = "name";
  }

  // Updates a `WorkItemAttempt`.
  //
  // Update the State to `FAILED`
  rpc FailWorkItemAttempt(FailWorkItemAttemptRequest) returns (WorkItemAttempt) {
    option (google.api.method_signature) = "name";
  }
}

// Request message for `CreateWorkItemAttempt` method.
message CreateWorkItemAttemptRequest {
  // Required. The parent resource where this `WorkItemAttempt` will be created.
  // Format: "workItems/{work_item}"
  string parent = 1 [(google.api.field_behavior) = REQUIRED];
}

// Request message for `GetWorkItemAttempt` method.
message GetWorkItemAttemptRequest {
  // Resource name.
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "control-plane.secure-computation.halo-cmm.org/WorkItemAttempt"
  ];
}

// Request message for `ListWorkItemAttempts` method.
message ListWorkItemAttemptsRequest {
  // Format: workItems/{work_item}
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "control-plane.secure-computation.halo-cmm.org/WorkItem"
  ];
}

// Response message for `ListWorkItemAttempts` method.
message ListWorkItemAttemptsResponse {
  // The work item attempts from the specified work item. Ordered by
  // `create_time`, descending.
  repeated WorkItemAttempt work_item_attempts = 1;
}

// Request message for `CompleteWorkItemAttempt` method.
message CompleteWorkItemAttemptRequest {
  // Resource name.
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "control-plane.secure-computation.halo-cmm.org/WorkItemAttempt"
  ];
}

// Request message for `FailWorkItemAttempt` method.
message FailWorkItemAttemptRequest {
  /// Resource name.
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "control-plane.secure-computation.halo-cmm.org/WorkItemAttempt"
  ];

  // Human-readable error message. This should not include any sensitive info.
  string error_message = 2;
}
